@@ -1,0 +1,5 @@
+Extends the functionality of 'ggplot2', providing the capability to
+plot ternary diagrams for (subset of) the 'ggplot2' geometries.
+Additionally, 'ggtern' has implemented several NEW geometries which
+are unavailable to the standard 'ggplot2' release. For further
+examples and documentation, please proceed to the 'ggtern' website.
