@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 15:51:57 brook Exp $
+
+SHA1 (R/ggtern_3.1.0.tar.gz) = 2429c23cf6b3f75e50b779493b95d1ea81943156
+RMD160 (R/ggtern_3.1.0.tar.gz) = 96eda1c81a305ef2b9a93481fd41c86eb7edfb4f
+SHA512 (R/ggtern_3.1.0.tar.gz) = fb48e229e3b04b17655e61d0fe7f9adeb22b0b8cfdcfd402925c3aa5a6ca00031be2568273cb71c69b845e04e5d5cbd0888a82a389a95c8d9e4dff744d0a4a1c
+Size (R/ggtern_3.1.0.tar.gz) = 564090 bytes
